--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.1",
+    "@mui/material": "^5.14.8",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.15.0",
+    "tailwindcss": "^3.3.3",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "vite": "^4.4.9"
   }
 }
