--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
     "@mui/material": "^5.14.8",
+    "@mui/x-data-grid": "^6.18.4",
+    "@mui/x-data-grid-generator": "^6.18.5",
     "@mui/x-date-pickers": "^6.16.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
@@ -24,8 +26,10 @@
     "react": "18.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-intl": "^6.5.5",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3",
     "yup": "^1.2.0"
