--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.11.0",
     "react-intl": "^6.5.5",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^10.0.4",
     "tailwindcss": "^3.3.3",
     "yup": "^1.2.0"
   },
