--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@mui/x-data-grid": "^6.18.4",
     "@mui/x-data-grid-generator": "^6.18.5",
     "@mui/x-date-pickers": "^6.16.0",
+    "cookie": "^0.6.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "next-auth": "^4.24.6",
-    "react": "18.2.0",
+    "nookies": "^2.5.2",
+    "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
